# gts3

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  gtscmdlineextern.cpp  gtsstartupextensions.cpp
examples/web_business/: CMakeLists.txt  business_plugins.json  cgi0.cpp  login.cpp  plugin0.cpp  plugin1.cpp  plugin2.cpp  plugins.json  upload.cpp
examples/web_resource/: button.html  http-parsing.html  index.html  log.html  pass.html  web.html  网络协议.md
examples/web_resource/download/: hello.txt
gts/: CMakeLists.txt  algorithm.cpp  algorithm.h  application.cpp  application.h  args_parser.cpp  args_parser.h  byte_order.cpp  byte_order.h  chrono.h  config.ini  coro_for_asio.cpp  coro_for_asio.h  coroutine.cpp  coroutine.h  cplusplus.hpp  cpp_attribute.h  exception.h  execution.cpp  execution.h  flags.h  formatter.h  global.cpp  global.h  gts_config_key.h  gts_enable_ssl.h  gts_enable_ssl_p.h  gts_global.h  gts_namespace.h  log.cpp  log.h  log_buffer.cpp  log_buffer.h  mime_type.cpp  mime_type.h  move_wrapper.h  registration.cpp  registration.h  rw_mutex.cpp  rw_mutex.h  (+14 more)
gts/dbi/: CMakeLists.txt  cell.cpp  cell.h  connection.cpp  connection.h  driver.cpp  driver.h  error.h  execute.cpp  execute.h  format_ex.h  formatter.h  global.h  manager.cpp  manager.h  result_iterator.cpp  result_iterator.h  result_set.cpp  result_set.h  types.h
gts/dbi/detail/: cell.h  connection.h  driver.h  error.h  result_iterator.h
gts/detail/: application.h  byte_order.h  coro_for_asio.h  coro_utilities.h  coroutine.h  coroutine_base.cpp  coroutine_base.h  exception.h  flags.h  function_traits.h  log.h  log_buffer.h  move_wrapper.h  registration.h  rw_mutex.h  settings.h  tcp_socket.h  value.h
gts/http/: CMakeLists.txt  container.h  cookies.cpp  cookies.h  formatter.h  global.h  http_global.h  parser.cpp  parser.h  request.cpp  request.h  request_impl.cpp  response.cpp  response.h  service_context.cpp  service_context.h  session.cpp  session.h  types.cpp  types.h  value.h
gts/http/detail/: container.h  cookies.h  request.h  request_impl.cpp  request_impl.h  response.h  session.h  value.h
gts/private/: app_info.cpp  app_info.h  application_unix.cpp  application_win.cpp  tcp_socket_unix.cpp
gts/server/: CMakeLists.txt  application.cpp  application.h  global.cpp  global.h  main.cpp  plugins.json.in  server_tool.cpp  server_tool.h
gts/server/cmdline/: app_core.cpp  app_core.h  arguments.cpp  arguments.h  interaction.cpp  interaction.h
gts/server/server/: cmdline_server.cpp  cmdline_server.h  tcp_server.cpp  tcp_server.h
gts/server/subserver/: server_ope.h  subserver_manager.cpp
gts/utls/: CMakeLists.txt  db_convert.h  db_convert_detail.h  global.h  json.cpp  json.h  registration.h
gts/utls/detail/: db_convert.h  json.h
gts/web/: CMakeLists.txt  config_key.h  global.h  main.cpp  registration.cpp  registration.h  socket.cpp  socket.h  socket_frame.cpp  socket_frame.h  socket_frame_parser.cpp  socket_frame_parser.h  socket_frame_writer.cpp  socket_frame_writer.h  socket_protocol.cpp  socket_protocol.h  thread_pool.h  types.h  web_global.h
gts/web/detail/: registration.h  socket.h  socket_frame_impl.h  types.h
gts/web/service/: connection.cpp  connection.h  plugins_service.cpp  plugins_service.h  service_io.cpp  service_io.h  task.cpp  task.h
src/: CMakeLists.txt  config.ini  plugins.json.in  sites.json.in
src/core/: CMakeLists.txt  app_info.cpp  app_info.h  from_json.cpp  from_json.h  gts_algorithm.cpp  gts_algorithm.h  gts_config_key.h  gts_global.cpp  gts_global.h  json.cpp  json.h  process.cpp  process.h  server_tool.cpp  server_tool.h  settings.cpp  settings.h  socket.cpp  socket.h
src/core/gts/: algorithm.cpp  algorithm.h  application.cpp  application.h  args_parser.cpp  args_parser.h  chrono.h  cplusplus.hpp  exception.h  fmt_formatter.h  gts_config_key.h  gts_disable_ssl_p.h  gts_enable_ssl.h  gts_enable_ssl_p.h  gts_global.cpp  gts_global.h  log.cpp  log.h  log_buffer.h  log_operator.h  mime_type.cpp  registration.cpp  registration.h  rw_mutex.h  settings.cpp  settings.h  socket.cpp  socket.h  ssl.cpp  ssl.h  ssl_socket.cpp  ssl_socket.h  string_list.cpp  string_list.h  tcp_socket.cpp  tcp_socket.h  utility.h  uuid.cpp  uuid.h
src/core/private/: app_info_unix.cpp  app_info_win.cpp  gts_global_p.h  gts_global_unix.cpp  gts_global_win.cpp  process_p.h  process_unix.cpp  process_win.cpp  tcp_socket_unix.cpp  tcp_socket_win.cpp
src/dbi/: CMakeLists.txt
src/dbi/gts/: cell.cpp  cell.h  dbi_global.h  driver.cpp  driver.h  execute.h  manager.h  utility.h
src/log/: CMakeLists.txt  gts_log.h  log.cpp  log.h  log_buffer.cpp  log_buffer.h  log_global.h  log_operator.h  rw_lock.h
src/log/gts/: log.cpp  log.h  log_buffer.cpp  log_buffer.h  log_global.h  log_operator.h
src/log/private/: rw_lock.cpp  rw_lock.h
src/server/: CMakeLists.txt  application.cpp  application.h  config.ini  global.cpp  global.h  gts_plugin.h  main.cpp  startup_plugin_interface.h
src/server/cmdline/: app_core.cpp  app_core.h  arguments.cpp  arguments.h  interaction.cpp  interaction.h
src/server/server/: cmdline_server.cpp  cmdline_server.h  tcp_plugin_interface.h  tcp_server.cpp  tcp_server.h
src/server/subserver/: server_ope.cpp  server_ope.h  subserver_manager.cpp  subserver_manager.h
src/web/: CMakeLists.txt  global.cpp  global.h  main.cpp  session.cpp  session.h  socket.cpp  socket.h  web_config_key.h  web_global.cpp  web_global.h
src/web/gts/: http.h  web.h  web_config_key.h  web_global.cpp  web_global.h  web_plugin_interface.h  websocket.cpp  websocket.h
src/web/http/: parser.cpp  parser.h  protocol.cpp  protocol.h  request.cpp  request.h  response.cpp  response.h
src/web/private/: request_impl.h
src/web/service/: cgi_service.cpp  cgi_service.h  co_task.cpp  co_task.h  gts_web_plugin.h  mime_type.cpp  mime_type.h  plugins_service.cpp  plugins_service.h  service.cpp  service.h  service_io.cpp  service_io.h  static_resource_service.cpp  static_resource_service.h  task.cpp  task.h
src/web/session/: http_parser.cpp  http_parser.h  request_impl.cpp  (+3 more)
(+48 files in other folders)
